NEXT-1207 - Assign media folder to media on upload

--- a/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
@@ -9,7 +9,7 @@
             :autoUpload="false"
             :itemToReplace="itemToReplace"
             variant="regular"
-            @new-upload="onNewUpload">
+            @new-uploads-added="onNewUpload">
         </sw-media-replace>
 
         {% block sw_media_modal_replace_modal_footer %}
