--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -55,7 +55,7 @@
                 {% block sw_media_index_smart_bar_media_upload %}
                     <sw-media-upload
                         variant="compact"
-                        @new-upload-started="onNewUpload">
+                        @new-uploads-added="onUploadsAdded">
                     </sw-media-upload>
                 {% endblock %}
 
