--- a/Resources/administration/src/module/sw-profile/extension/sw-admin-menu/sw-admin-menu.html.twig
+++ b/Resources/administration/src/module/sw-profile/extension/sw-admin-menu/sw-admin-menu.html.twig
@@ -2,7 +2,7 @@
     {% parent %}
 
     <li class="sw-admin-menu__navigation-list-item">
-        <router-link class="sw-admin-menu__navigation-link"
+        <router-link class="sw-admin-menu__navigation-link sw-admin-menu__profile-item"
                      :to="{ name: 'sw.profile.index', params: { user } }">
             <sw-icon class="sw-admin-menu__navigation-link-icon" name="default-avatar-single" small></sw-icon>
             {{ $tc('sw-profile.general.headlineProfile') }}
