NEXT-1207 - Make drag select possible with sw-media-entity-mapper

--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -173,6 +173,7 @@
                                                     <sw-media-entity-mapper
                                                         v-for="gridItem in selectableItems"
                                                         :key="gridItem.entityName + '_' + gridItem.id"
+                                                        :class="dragSelectorClass"
                                                         :item="gridItem"
                                                         :selected="showItemSelected(gridItem)"
                                                         :showSelectionIndicator="isListSelect"
