NEXT-1081 - Refactor sw-select to use a store instead of a service provider

--- a/Resources/administration/src/module/sw-product/component/sw-product-category-form/sw-product-category-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-category-form/sw-product-category-form.html.twig
@@ -20,8 +20,8 @@
                            ref="multiSelectCategories"
                            :label="$tc('sw-product.categoryForm.labelCategory')"
                            :placeholder="$tc('sw-product.categoryForm.placeholderCategory')"
-                           :serviceProvider="categoryService"
-                           :store="categoriesStore"
+                           :associationStore="categoryAssociationStore"
+                           :store="categoryStore"
                            :criteria="criteria"
                            :disabled="!hasCriteria"
                            v-model="product.categories">
