--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
@@ -27,7 +27,7 @@
                                class="sw-sales-channel-detail__select-payment-method"
                                :label="$tc('sw-sales-channel.detail.labelInputPaymentMethods')"
                                validation="required"
-                               :serviceProvider="paymentMethodService"
+                               :associationStore="paymentMethodAssociationStore"
                                :store="paymentMethodStore"
                                entityName="paymentMethod"
                                :defaultItemId="salesChannel.paymentMethodId"
@@ -42,7 +42,7 @@
                                class="sw-sales-channel-detail__select-shipping-method"
                                :label="$tc('sw-sales-channel.detail.labelInputShippingMethods')"
                                validation="required"
-                               :serviceProvider="shippingMethodService"
+                               :associationStore="shippingMethodAssociationStore"
                                :store="shippingMethodStore"
                                entityName="shippingMethod"
                                :defaultItemId="salesChannel.shippingMethodId"
@@ -57,7 +57,7 @@
                                class="sw-sales-channel-detail__select-countries"
                                :label="$tc('sw-sales-channel.detail.labelInputCountries')"
                                validation="required"
-                               :serviceProvider="countryService"
+                               :associationStore="countryAssociationStore"
                                :store="countryStore"
                                entityName="country"
                                :defaultItemId="salesChannel.countryId"
@@ -72,7 +72,7 @@
                                class="sw-sales-channel-detail__select-currencies"
                                :label="$tc('sw-sales-channel.detail.labelInputCurrencies')"
                                validation="required"
-                               :serviceProvider="currencyService"
+                               :associationStore="currencyAssociationStore"
                                :store="currencyStore"
                                entityName="currency"
                                :defaultItemId="salesChannel.currencyId"
@@ -87,7 +87,7 @@
                                class="sw-sales-channel-detail__select-languages"
                                :label="$tc('sw-sales-channel.detail.labelInputLanguages')"
                                validation="required"
-                               :serviceProvider="languageService"
+                               :associationStore="languageAssociationStore"
                                :store="languageStore"
                                entityName="language"
                                :defaultItemId="salesChannel.languageId"
@@ -101,7 +101,7 @@
                                multi
                                class="sw-sales-channel-detail__select-catalogues"
                                :label="$tc('sw-sales-channel.detail.labelInputCatalogs')"
-                               :serviceProvider="catalogService"
+                               :associationStore="catalogAssociationStore"
                                :store="catalogStore"
                                entityName="catalog"
                                v-model="salesChannel.catalogs">
