NEXT-1042 - Use media preview in products

--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.less
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.less
@@ -26,7 +26,7 @@
         grid-auto-flow: dense;
     }
 
-    .sw-image.is--cover {
+    .sw-product-image.is--cover {
         grid-column-start: 1;
         grid-column-end: 3;
         grid-row-start: 1;
