--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
@@ -19,15 +19,14 @@
                 {%  block sw_product_media_form_grid_items %}
                     <template v-for="mediaItem in mediaItems">
                         <sw-loader v-if="mediaItem.isLoading"></sw-loader>
-                        <sw-image v-else
-                                @sw-image-delete="removeFile(mediaItem.mediaId)"
-                                @sw-image-cover="markMediaAsCover(mediaItem)"
+                        <sw-product-image v-else
+                                @sw-product-image-delete="removeFile(mediaItem.mediaId)"
+                                @sw-product-image-cover="markMediaAsCover(mediaItem)"
                                 :key="mediaItem.mediaId"
                                 :isCover="isCover(mediaItem)"
                                 :isPlaceholder="mediaItem.isPlaceholder"
-                                :tooltip="getTooltipForMedia(mediaItem.media)"
-                                :url="getPreviewForMedia(mediaItem.media)"
-                                :downloadable="true"></sw-image>
+                                :item="mediaItem.media">
+                        </sw-product-image>
                     </template>
                 {% endblock %}
             </div>
