--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
@@ -104,7 +104,7 @@
 
                                     {% block sw_admin_menu_user_actions_items_change_language %}
                                         <li class="sw-admin-menu__navigation-list-item">
-                                            <a href="#" class="sw-admin-menu__navigation-link" @click.prevent="onChangeLanguage">
+                                            <a href="#" class="sw-admin-menu__navigation-link sw-admin-menu__change-language-action" @click.prevent="onChangeLanguage">
                                                 <sw-icon class="sw-admin-menu__navigation-link-icon"
                                                          name="default-location-flag"
                                                          small>
