--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.html.twig
@@ -10,8 +10,9 @@
                     {% block sw_media_quickinfo_multiple_quickactions_content %}
                         <ul class="sw-media-quickinfo-multiple__collapse-content sw-media-quickinfo-multiple__two-columns">
                             {% block sw_media_quickinfo_multiple_quickactions_delete %}
-                                <li class="sw-media-quickinfo-multiple__quickaction is--danger"
-                                     @click="emitOpenModalDelete">
+                                <li v-if="!hasFolder"
+                                    class="sw-media-quickinfo-multiple__quickaction is--danger"
+                                    @click="emitOpenModalDelete">
                                     {% block sw_media_quickinfo_multiple_quickactions_delete_icon %}
                                         <sw-icon small
                                                  name="default-action-trash"
