--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
@@ -12,22 +12,18 @@
                         {% block sw_media_sidebar_item_quickinfo_content %}
                             <div class="sw-media-sidebar__quickinfo-wrapper">
                                 <sw-media-quickinfo
-                                    v-if="isSingleFile && items[0].entityName === 'media'"
+                                    v-if="isSingleFile"
                                     :key="getKey"
                                     :item="items[0]"
                                     :autoplay="autoplay"
                                     @sw-media-quickinfo-open-modal-replace="openModalReplace"
-                                    @sw-media-quickinfo-open-modal-delete="openModalDelete">
+                                    @sw-media-quickinfo-open-modal-delete="openModalDelete"
+                                    @sw-media-quickinfo-open-folder-settings="openFolderSettings">
                                 </sw-media-quickinfo>
-
-                                <div v-else-if="isSingleFile && items[0].entityName === 'media_folder'">
-                                    <sw-alert variant="info" style="margin: 25px">
-                                        {{ $tc('sw-media.sidebar.quickinfo.infoFolder') }}
-                                    </sw-alert>
-                                </div>
 
                                 <sw-media-quickinfo-multiple
                                     v-else-if="isMultipleFile"
+                                    :hasFolder="hasFolder"
                                     :items="items"
                                     @sw-media-quickinfo-open-modal-delete="openModalDelete">
                                 </sw-media-quickinfo-multiple>
@@ -40,7 +36,7 @@
                     <sw-sidebar-item
                         icon="default-action-trash"
                         :title="$tc('sw-media.sidebar.actions.delete')"
-                        :disabled="!mediaItems.length"
+                        :disabled="!showDeleteButton"
                         position="bottom"
                         @click="openModalDelete">
                     </sw-sidebar-item>
@@ -63,6 +59,15 @@
                 @sw-media-modal-delete-close="closeModalDelete"
                 @sw-media-modal-delete-items-deleted="deleteSelectedItems">
             </sw-media-modal-delete>
+        {% endblock %}
+
+        {% block sw_media_sidebar_folder_settings_modal %}
+            <sw-media-modal-folder-settings
+                    v-if="showFolderSettings"
+                    :folder="items[0]"
+                    @sw-media-modal-folder-settings-save="closeFolderSettings"
+                    @sw-media-modal-folder-settings-close="closeFolderSettings">
+            </sw-media-modal-folder-settings>
         {% endblock %}
     </div>
 {% endblock %}
