--- a/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.html.twig
@@ -8,10 +8,10 @@
                             ref="conditionTypeSelect"
                             @change="handleConditionChange">
                         {% block sw_condition_group_field_condition_select_option %}
-                            <option v-for="(innerCondition, innerConditionType) in conditionTypes"
+                            <option v-for="(innerCondition, innerConditionType) in ruleConditionService.getConditions()"
                                     :selected="innerConditionType === condition.type"
                                     :value="innerConditionType">
-                                {{ innerCondition.label }}
+                                {{ $tc(innerCondition.label) }}
                             </option>
                         {% endblock %}
                     </select>
@@ -27,7 +27,7 @@
                             ref="operatorTypeSelect"
                             @change="handleOperatorChange">
                         <option v-for="operator in conditionOperators"
-                                value="">{{ operator.label }}</option>
+                                value="">{{ $tc(operator.label)}}</option>
                     </select>
                 {% endblock %}
             </div>
