--- a/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
@@ -29,6 +29,16 @@
                                           v-model="folder.name">
                                 </sw-field>
                             {% endblock %}
+
+                            {% block sw_media_modal_folder_settings_default_folder %}
+                                <sw-select id="defaultFolder"
+                                           :value="defaultFolder ? defaultFolder.id : ''"
+                                           :store="mediaDefaultFolderStore"
+                                           :label="$tc('global.sw-media-modal-folder-settings.labelDefaultFolder')"
+                                           displayName="entity"
+                                           @input="onInputDefaultFolder">
+                                </sw-select>
+                            {% endblock %}
                         </sw-container>
                     {% endblock %}
 
