Stop folder navigation when inline edit is clicked

--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
@@ -42,7 +42,7 @@
                          ref="itemName"
                          :title="displayName"
                          :data-last-content="lastContent"
-                         @dblclick="startInlineEdit">
+                         @dblclick.stop="startInlineEdit">
                         {{ displayName }}
                     </div>
                 {% endblock %}
