Add Back to parent folder in media grid

--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
@@ -18,7 +18,7 @@
 
         {% block sw_media_base_item_preview %}
             <div class="sw-media-base-item__preview-container">
-                <slot name="media-item-preview">
+                <slot name="sw-media-item-preview">
                     {% block sw_media_base_item_slot_media_preview %}{% endblock %}
                 </slot>
             </div>
@@ -26,26 +26,28 @@
 
         {% block sw_media_base_item_name_container %}
             <div class="sw-media-base-item__name-container">
-                {% block sw_media_base_item_name %}
-                    <sw-field v-if="isInlineEdit"
-                              ref="inputItemName"
-                              class="sw-media-base-item__name-field"
-                              :value="editValue"
-                              v-autofocus
-                              @click.stop
-                              @blur="onBlurInlineEdit"
-                              @keyup.enter="onDoRenaming"
-                              @keyup.esc="onCancelRenaming">
-                    </sw-field>
-                    <div v-else
-                         class="sw-media-base-item__name"
-                         ref="itemName"
-                         :title="displayName"
-                         :data-last-content="lastContent"
-                         @dblclick.stop="startInlineEdit">
-                        {{ displayName }}
-                    </div>
-                {% endblock %}
+                <slot name="sw-media-item-name">
+                    {% block sw_media_base_item_name %}
+                        <sw-field v-if="isInlineEdit"
+                                  ref="inputItemName"
+                                  class="sw-media-base-item__name-field"
+                                  :value="editValue"
+                                  v-autofocus
+                                  @click.stop
+                                  @blur="onBlurInlineEdit"
+                                  @keyup.enter="onDoRenaming"
+                                  @keyup.esc="onCancelRenaming">
+                        </sw-field>
+                        <div v-else
+                             class="sw-media-base-item__name"
+                             ref="itemName"
+                             :title="displayName"
+                             :data-last-content="lastContent"
+                             @dblclick="startInlineEdit">
+                            {{ displayName }}
+                        </div>
+                    {% endblock %}
+                </slot>
             </div>
         {% endblock %}
 
