--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.less
@@ -134,9 +134,9 @@
     }
 
     .sw-media-base-item__loader {
-        top: 18px;
-        right: 24px;
         position: absolute;
+        top: @sw-media-base-item-pseudo-padding;
+        right: @sw-media-base-item-pseudo-padding;
         color: @sw-media-base-item-color-loading-indicator;
         animation-name: sw-media-loader-rotation;
         animation-duration: 1s;
