--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
@@ -114,6 +114,18 @@
         -webkit-overflow-scrolling: touch;
     }
 
+    .sw-media-index__parent-folder {
+        &:hover {
+            .sw-media-base-item__selected-indicator {
+                visibility: hidden;
+            }
+        }
+
+        .sw-media-base-item__name-container {
+            font-weight: 600;
+        }
+    }
+
     .sw-media-index__load-more {
         text-align: center;
         margin: 15px 0;
