--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -25,7 +25,7 @@
                     {% endblock %}
 
                     {% block sw_media_index_bread_crumb_navigation_parent%}
-                        <span v-if="currentFolder" class="sw-media-index__navigation-parent">
+                        <span v-if="parentFolder" class="sw-media-index__navigation-parent">
                             <sw-icon name="small-arrow-medium-right" class="sw-media-index__navigation-breadcrumb"></sw-icon>
                             <router-link :to="{ name: 'sw.media.index', params: { folderId: currentFolder.parentId } }">
                                 {{ this.parentFolderName }}
@@ -45,7 +45,7 @@
             {% block sw_media_index_smart_bar_header %}
                 <h2 slot="smart-bar-header">
                     {% block sw_media_index_smart_bar_heading %}
-                        {{ $tc('sw-media.smart-bar.smartBarHeader') }}
+
                     {% endblock %}
                 </h2>
             {% endblock %}
@@ -158,11 +158,23 @@
                                          @mousedown.left="onMouseDown"
                                          ref="scrollContainer">
 
-                                        {% block sw_media_catalog_media_grid %}
+                                        {% block sw_media_index_media_grid %}
                                             <sw-media-grid
                                                     class="sw-media-index__media-grid"
                                                     :presentation="presentation"
+                                                    ref="mediaGrid"
                                                     @sw-media-grid-selection-clear="clearSelection">
+
+                                                {% block sw_media_index_parent_folder %}
+                                                    <sw-media-folder-item
+                                                        class="sw-media-index__parent-folder"
+                                                        v-if="parentFolder"
+                                                        :item="parentFolder"
+                                                        :showContextMenuButton="false"
+                                                        :editable="false"
+                                                        isParent>
+                                                    </sw-media-folder-item>
+                                                {% endblock %}
 
                                                 {% block sw_media_index_selectable_items %}
                                                     <sw-media-entity-mapper
