NEXT-1125 - Use folder config to generate thumbnails

--- a/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.less
+++ b/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.less
@@ -14,19 +14,21 @@
     }
 
     .sw-media-modal-folder-settings__thumbnails-left-container {
-        :first-child {
-            margin-bottom: 0;
-        }
-
         .sw-field--boolean {
+            margin-bottom: 0;
+
             label {
                 height: 0;
                 margin: 0
             }
 
             .sw-field__input {
-                border: none !important;
+                border: none;
             }
+        }
+
+        .sw-field--number {
+            margin-top: 22px;
         }
     }
 
