--- a/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
@@ -68,6 +68,14 @@
                                         </sw-field>
                                     {% endblock %}
 
+                                    {% block sw_media_modal_folder_settings_keep_proportions_field %}
+                                        <sw-field type="boolean"
+                                                  :label="$tc('global.sw-media-modal-folder-settings.labelKeepProportions')"
+                                                  v-model="folder.configuration.keepAspectRatio"
+                                                  :disabled="notEditable">
+                                        </sw-field>
+                                    {% endblock %}
+
                                     {% block sw_media_modal_folder_settings_thumbnails_quality_field %}
                                         <sw-field
                                                 type="number"
