--- a/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
@@ -35,8 +35,19 @@
                                            :value="defaultFolder ? defaultFolder.id : ''"
                                            :store="mediaDefaultFolderStore"
                                            :label="$tc('global.sw-media-modal-folder-settings.labelDefaultFolder')"
-                                           displayName="entity"
-                                           @input="onInputDefaultFolder">
+                                           @input="onInputDefaultFolder"
+                                           displayName="entity">
+                                    <template slot="selected_option" slot-scope="{ item }">
+                                        {{ getItemName(item) }}
+                                    </template>
+
+                                    <template slot="result_items" slot-scope="{ item, index }">
+                                        <sw-select-option
+                                                :index="index"
+                                                :item="item">
+                                            {{ getItemName(item) }}
+                                        </sw-select-option>
+                                    </template>
                                 </sw-select>
                             {% endblock %}
                         </sw-container>
